<resources>
    <string name="app_name">WSMovie</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="price">Price</string>
    <string name="children">Children</string>
    <string name="adults">Adults</string>
    <string name="save">Save</string>
    <string name="list">List</string>
    <string name="back">Back</string>
    <string name="actions_settings">actions settings</string>
    <string name="adultos">adultos</string>
    <string name="regresar">Regresar</string>
    <string name="modificar">modificar</string>
    <string name="eliminar">eliminar</string>
    <string name="action_settings">action settings</string>
    <string name="update">Update</string>
    <string name="remove">remove</string>
    <string name="back_it">Back</string>
    <string name="document_name">Document name:</string>
    <string name="desc">Description</string>
    <string name="university">University</string>
    <string name="active_situation">Active situation</string>
    <string name="creation_date">Creation Date:</string>
    <string name="ws_movie">First Web server: Movie</string>
    <string name="ws_document">Second web server: Document</string>
    <string name="name_of_company">Name of Company:</string>
    <string name="owner">Owner</string>
    <string name="foundation_date">Foundation date</string>
    <string name="type_of_company">Type of company</string>
    <string name="objetive">Objetive:</string>
    <string name="_name">Enter your Name:</string>
    <string name="nickname">Nickname:</string>
    <string name="fullname">Enter your fullname:</string>
    <string name="age">Your age:</string>
    <string name="hobby">Write you hobby:</string>
    <string name="third_wws">Third web server: Company</string>
    <string name="fourth_ws">Fourth web server: About me</string>
    <string name="fruit_name">Fruit name:</string>
    <string name="flavor">Flavor:</string>
    <string name="color_fruit">Color of the fruit:</string>
    <string name="fifth_ws">Fifth web server: Fruit</string>
    <string name="movie_name">Movie Name:</string>
    <string name="name_song">Name of song:</string>
    <string name="author_name">Author name:</string>
    <string name="album">Album</string>
    <string name="year">Year:</string>
    <string name="sixth_ws">Sixth web server: Song</string>
</resources>
