<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wolverine"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name_movie"
        android:inputType="text"
        android:background="@color/boxColor"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinopsis"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_sipnosis"
        android:inputType="text"
        android:background="@color/boxColor"
        android:textColor="@color/blackColor"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_price"
        android:inputType="numberDecimal"
        android:background="@color/boxColor"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Type"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/children"
        android:textOff="@string/adults"
        android:id="@+id/toogle_type"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_save"

            />
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/bt_list"

            />
    </LinearLayout>
</LinearLayout>
