<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mandala"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fruit_name"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/boxColor"


        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flavor"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/boxColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_flavor"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_fruit"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/boxColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_colour"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/boxColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_price"
        android:inputType="number"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_save"

            />
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/bt_list"

            />
    </LinearLayout>
</LinearLayout>
