<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/carretera"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/desc"
    android:fontFamily="serif-monospace"
    android:textSize="20dp"
    android:textColor="@color/blackColor"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_description"
    android:inputType="text"
    android:background="@color/greenLight"
    android:textColor="@color/blackColor"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/active_situation"
    android:fontFamily="serif-monospace"
    android:textSize="20dp"
    android:textColor="@color/blackColor"

    />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_active"
    android:inputType="text"
    android:background="@color/greenLight"
    android:textColor="@color/blackColor"

    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/university"
    android:fontFamily="serif-monospace"
    android:textSize="20dp"
    android:textColor="@color/blackColor"
    />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_university"
    android:inputType="text"
    android:background="@color/greenLight"
    android:textColor="@color/blackColor"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/creation_date"
    android:fontFamily="serif-monospace"
    android:textSize="20dp"
    android:textColor="@color/blackColor"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_date"
    android:inputType="text"
    android:background="@color/greenLight"
    android:textColor="@color/blackColor"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bt_save"
        android:background="@color/yellowLight"
        android:textColor="@color/blackColor"
        android:fontFamily="casual"
        android:layout_margin="@dimen/bt_margin"

        />
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:id="@+id/bt_list"
        android:background="@color/yellowLight"
        android:textColor="@color/blackColor"
        android:fontFamily="casual"
        android:layout_margin="@dimen/bt_margin"

        />
</LinearLayout>
</LinearLayout>