<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/me"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_fullname"
        android:inputType="text"
        android:background="@color/blackColor"
        android:textColor="@color/boxColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_nickname"
        android:inputType="text"
        android:background="@color/blackColor"
        android:textColor="@color/boxColor"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_age"
        android:inputType="text"
        android:background="@color/blackColor"
        android:textColor="@color/boxColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobby"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_hobby"
        android:inputType="text"
        android:background="@color/blackColor"
        android:textColor="@color/boxColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_save"
            android:background="@color/greenLight"
            android:textColor="@color/blackColor"
            android:fontFamily="casual"
            android:layout_margin="@dimen/bt_margin"

            />
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/bt_list"
            android:background="@color/greenLight"
            android:textColor="@color/blackColor"
            android:fontFamily="casual"
            android:layout_margin="@dimen/bt_margin"

            />
    </LinearLayout>
</LinearLayout>