<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/company"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_company"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name_company"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_owner"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foundation_date"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_foundation"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_of_company"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_type"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objetive"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_objetive"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Partner(s):"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"
        android:textColor="@color/blackColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_partner"
        android:inputType="text"
        android:background="@color/greenLight"
        android:textColor="@color/blackColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_save"
            android:background="@color/yellowLight"
            android:textColor="@color/blackColor"
            android:fontFamily="casual"
            android:layout_margin="@dimen/bt_margin"

            />
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:id="@+id/bt_list"
            android:background="@color/yellowLight"
            android:textColor="@color/blackColor"
            android:fontFamily="casual"
            android:layout_margin="@dimen/bt_margin"

            />
    </LinearLayout>
</LinearLayout>
